<resources>
    <string name="app_name">RecyclerView</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="imageView">ImageView</string>
    <string name="movieName">movieName</string>
    <string name="movieRatings">movieRatings</string>
    <string name="movieImage">movieImage</string>
    <string name="movieList">MovieList</string>
    <string name="Images">Images</string>
    <string name="Name">Name</string>
    <string name="Ratings">Ratings</string>

    <string-array name="Top_10_movies">
        <item>Parasite</item>
        <item>Avengers:EndGame</item>
        <item>Us(2019)</item>
        <item>Knives Out</item>
        <item>Toy Story 4</item>
        <item>The Irishman</item>
        <item>Little Woman</item>
        <item>BookSmart</item>
        <item>The Farewell</item>
        <item>Marriage Story</item>
    </string-array>

    <string-array name="Movie_ratings">
        <item>99%</item>
        <item>94%</item>
        <item>93%</item>
        <item>97%</item>
        <item>97%</item>
        <item>96%</item>
        <item>95%</item>
        <item>97%</item>
        <item>98%</item>
        <item>95%</item>
    </string-array>
</resources>
