<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="800dp"
    android:background="#000000">

    <ImageView
        android:id="@+id/movieImage"
        android:layout_width="830dp"
        android:layout_height="470dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/movieImage"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="206dp"
        android:layout_marginEnd="-79dp"
        android:layout_marginBottom="329dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/movieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:padding="2dp"
            android:text="@string/movieName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieRatings"
            android:layout_width="1672dp"
            android:layout_height="365dp"
            android:layout_marginStart="10dp"
            android:text="@string/movieRatings"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</RelativeLayout>